@@ -1,4 +1,5 @@
 version 0.99.2 - XX-Apr-2010
+ . [FIX] Grid: simplied code, easier to maintain, added support for flipped textures
 
 version 0.99.2-rc - 15-Apr-2010
  . [NEW] Actions: Added blocks actions via PLBlocks: CCCallBlock and CCCallBlockN (issue #699)
